Postpone compilation of jdk11 time files
to the tests to decrease build time.

Bug: 201247429
Change-Id: I0c68e4277ff435b92a76198fcc11ca4971329e33